2013-02-06 0.4.3 Recurrent records are now available

2013-02-06 0.4.3 About page and Wiki added, recorded file extension fixed and now configurable
				 Default sorting column for all tables implemented				 
				 Old records will be shown and must be purged manually
				 
2013-02-04 0.4.3 CherryPy Server implemented for better stability under load
 
2013-02-03 0.4.2a Syno-branch only: broken update script fixed. Sorry for inconvenience.

2013-02-03 0.4.2 Logging, license information, further optimisation

2013-02-02 0.4.1 Default database only. Database will be kept on update.